# zmqtests

./: CMakeLists.txt  README.md  zeromq.cmake
3186/: .gdbinit  CMakeLists.txt  Readme.md  callgrind.2951  callgrind.2951.txt  common.c  common.h  monitor.cpp  monitor.h  params.c  peer.cpp  proxy.c  repeat.sh  run.sh  runme.sh  runme2.sh  setenv.sh  stop.sh  zeromq.cmake
connect/: .gdbinit  CMakeLists.txt  Readme.md  build.sh  common.h  connect.cpp  dummy.cpp  monitor.cpp  monitor.h  params.c  setenv.sh
libzmq/4.2.3/: build.out
libzmq/4.2.3/admin/: dependencies
libzmq/4.2.4/: build.out
libzmq/4.2.4/admin/: dependencies
libzmq/4.2.5/: build.sh
libzmq/4.2.5/admin/: dependencies
libzmq/4.2.5/mods/: CMakeLists.txt
libzmq/4.2.5/mods/src/: socket_base.cpp
libzmq/master/: build.sh
libzmq/master/admin/: dependencies  devenv.common.sh
libzmq/master/mods/: CMakeLists.txt
pingpong/: CMakeLists.txt  Readme.md  common.c  common.h  params.c  ping.cpp  ping.sh  pong.cpp  pong.sh  setenv.sh  zeromq.cmake
reconnect/: CMakeLists.txt  Readme.md  connect.cpp  monitor.h  params.c  peer.cpp  proxy.cpp  run.sh  stop.sh
threads/: .gdbinit  CMakeLists.txt  README.md  clientserver.cpp  common.h  gdb.txt  pairs.cpp  pubsub.cpp  pushpull.cpp  threads.cpp
